// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a simple view without IP 1`] = `
<tr>
  <td>
    foo
  </td>
  <td>
    ClusterIP
  </td>
  <td />
  <td>
    None
  </td>
  <td />
</tr>
`;

exports[`renders a view with IP 1`] = `
<tr>
  <td>
    foo
  </td>
  <td>
    LoadBalancer
  </td>
  <td />
  <td>
    1.2.3.4
  </td>
  <td>
    80/TCP
  </td>
</tr>
`;
